--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "glamor": "^2.20.25",
+    "glamorous": "^3.21.0",
     "howler": "^2.0.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
