--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kexp-spotify",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "glamor": "^2.20.25",
     "glamorous": "^3.21.0",
